objects/APXT_CongaSign__Transaction__c.object
<CustomObject>
    <description>Replication of Conga Sign Transaction.</description>
    <fields>
        <fullName>APXT_CongaSign__BusinessUnit__c</fullName>
        <label>Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXT_CongaSign__CompletedOn__c</fullName>
        <label>Completed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>APXT_CongaSign__ContentDocumentId__c</fullName>
        <label>Content Document Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXT_CongaSign__Duration__c</fullName>
        <formula>IF ( BLANKVALUE( APXT_CongaSign__CompletedOn__c, NOW() ) &gt;= APXT_CongaSign__RequestedOn__c , CEILING( BLANKVALUE( APXT_CongaSign__CompletedOn__c, NOW() ) - APXT_CongaSign__RequestedOn__c ), null)</formula>
        <inlineHelpText>Conga Sign Transaction Completed Date - Conga Sign Transaction Created Date. Returns minimum value of 1 day and integer value.</inlineHelpText>
        <label>Duration Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APXT_CongaSign__ExternalObjectId__c</fullName>
        <externalId>true</externalId>
        <label>External Object Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXT_CongaSign__FinalDocumentId__c</fullName>
        <label>Final Document Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXT_CongaSign__FinalDocumentsSyncStatus__c</fullName>
        <label>Final Document Sync Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NONE</fullName>
                    <default>true</default>
                    <label>NONE</label>
                </value>
                <value>
                    <fullName>PENDING</fullName>
                </value>
                <value>
                    <fullName>SUCCESS</fullName>
                </value>
                <value>
                    <fullName>PARTIAL</fullName>
                </value>
                <value>
                    <fullName>FAIL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APXT_CongaSign__OriginalDocumentId__c</fullName>
        <label>Original Document Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXT_CongaSign__RequestedOn__c</fullName>
        <label>Created On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>APXT_CongaSign__SendOnBehalfOfEmail__c</fullName>
        <label>Send On Behalf Of Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>APXT_CongaSign__SendOnBehalfOfName__c</fullName>
        <label>Send On Behalf Of Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXT_CongaSign__SenderEmail__c</fullName>
        <label>Sender Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>APXT_CongaSign__SenderName__c</fullName>
        <label>Sender Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXT_CongaSign__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DRAFT</fullName>
                </value>
                <value>
                    <fullName>SENT</fullName>
                </value>
                <value>
                    <fullName>COMPLETE</fullName>
                </value>
                <value>
                    <fullName>DECLINED</fullName>
                </value>
                <value>
                    <fullName>PENDING_EXPIRATION</fullName>
                </value>
                <value>
                    <fullName>CANCELLED</fullName>
                </value>
                <value>
                    <fullName>EXPIRED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APXT_CongaSign__TransactionId__c</fullName>
        <label>Transaction Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXT_CongaSign__UUID__c</fullName>
        <externalId>true</externalId>
        <label>UUID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>APXT_CongaSign__WritebackStatus__c</fullName>
        <label>Write Back Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NONE</fullName>
                </value>
                <value>
                    <fullName>PENDING</fullName>
                </value>
                <value>
                    <fullName>SUCCESS</fullName>
                </value>
                <value>
                    <fullName>PARTIAL</fullName>
                </value>
                <value>
                    <fullName>FAIL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_006__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>APXT_CongaSign_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_800__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipName>APXT_CongaSign_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_801__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipName>APXT_CongaSign_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Conga Sign Transaction</label>
    <nameField>
        <displayFormat>CS-{000000}</displayFormat>
        <label>Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conga Sign Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>